--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -37,6 +37,6 @@ env:
     modules:
       config:
         WebDriver:
-          url: 'https://vanya:43terminal59Pass@dev1.cadencewatch.com:8130'
+          url: 'https://vanya:43terminal59Pass@dev1.cadencewatch.com:8130/default'
 
 
