--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -23,8 +23,8 @@ modules:
             #clear_cookies: false
 
             capabilities:
-             browserstack.user: 'alex3451'
-             browserstack.key: 'DM4aJvzKU5zsBcC5HxQo'
+             browserstack.user: 'cadencewatch1'
+             browserstack.key: 'RG12s8tJvQ9p3pZuxWzf'
              browserstack.debug: 'true'
              #applicationCacheEnabled: false
              unexpectedAlertBehaviour: 'accept'
