--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -14,8 +14,8 @@ modules:
 
             # run in browserstack
 
-            #host: 'hub.browserstack.com'
-            #port: 80
+            host: 'hub.browserstack.com'
+            port: 80
             browser: chrome
             window_size: 1950x1680
             restart: false
